admin/views/compobject/view.html.php - resolved bug checkedOut generatedialog.xml - set default template build.xml & codetemplate/.../build.xml - ANT task to debug install.sql - bug Error Code: 1101. BLOB, TEXT, GEOMETRY or JSON column 'images' and 'urls' can't have a default value architectcomp_install.php - configure UCM jos_content_types.content_history_options add ACL default file add content_history_options for UCM - generate.php, architectcomp_install.php

--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,8 @@
 <project name="com_componentarchitect" default="dist" basedir=".">
     <property name="link_dir" description="vinculo simbolico" value="D:/www/htdocs/jpruebas" />
+<!--    <property name="base_j34" description="src template j34" value="D:/projects/my_joomla/com_componentarchitect/plugins/cacodetemplates/plg_cacodetemplates_j34standard/com_architectcomp_j34standard" />
+    <property name="dest_j34" description="dest template j34" value="D:/www/htdocs/JPruebasUbnt/plugins/cacodetemplates/j34standard/com_architectcomp_j34standard.zip" />-->
+    
     
     <target name="clean" description="clean up directories">
 
@@ -118,4 +121,9 @@
             <fileset dir="${link_dir}/administrator/language/" includes="**/*componentarchitect*" />
         </delete>
     </target>
+    
+<!--    <target name="get_j34" >
+        <zip basedir="${base_j34}" destfile="${base_j34}.zip" update="true" />
+        <copy file="${base_j34}.zip" tofile="${dest_j34}" overwrite="true" />
+    </target>-->
 </project>
