components_asset/lyx/* archivos para prettificar lyx2html config.xml add version control
make_config_lyx.php - link que genenera el archivo config_lyx.tex para la documentación
config_lyx.php - genera patrón de código para documentar manual latex
generate.php - se mejoró i18n sustituyendo "_QQ_" por '&quot;'

es-ES soporte de idioma con archivos para editar desde Netbeans

@ToDo customize categories
administrator/components/com_categories/models/forms/category.xml
administrator/components/com_categories/views/category/tmpl/edit.php

@ToDo admin/models/fieldtypes.php , views/fieldtypes/view.html.php terminar ejemplo exportar excel

--- a/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/build.xml
+++ b/admin/codetemplates/j_3_4_standard/com_architectcomp_j34standard/build.xml
@@ -80,20 +80,31 @@
             <arg value='/c mklink /d "${link_dir}/administrator/components/[%%com_architectcomp%%]" "${basedir}\admin"'/>
         </exec>
         <exec executable="cmd" >
+            <arg value='/c mklink /d "${link_dir}/components/[%%com_architectcomp%%]" "${basedir}\site"'/>
+        </exec>
+        
+		<!--admin language-->
+		<exec executable="cmd" >
             <arg value='/c mklink "${link_dir}/administrator/language/en-GB/en-GB.[%%com_architectcomp%%].ini" "${basedir}\admin\language\en-GB\en-GB.[%%com_architectcomp%%].ini"'/>
         </exec>
         <exec executable="cmd" >
             <arg value='/c mklink "${link_dir}/administrator/language/en-GB/en-GB.[%%com_architectcomp%%].sys.ini" "${basedir}\admin\language\en-GB\en-GB.[%%com_architectcomp%%].sys.ini"'/>
         </exec>
-        <exec executable="cmd" >
-            <arg value='/c mklink /d "${link_dir}/components/[%%com_architectcomp%%]" "${basedir}\site"'/>
+		
+		<exec executable="cmd" >
+            <arg value='/c mklink "${link_dir}/administrator/language/es-ES/es-ES.[%%com_architectcomp%%].ini" "${basedir}\admin\language\es-ES\es-ES.[%%com_architectcomp%%].ini"'/>
         </exec>
+        <exec executable="cmd" >
+            <arg value='/c mklink "${link_dir}/administrator/language/es-ES/es-ES.[%%com_architectcomp%%].sys.ini" "${basedir}\admin\language\es-ES\es-ES.[%%com_architectcomp%%].sys.ini"'/>
+        </exec>
+		<!--site language-->
         <exec executable="cmd" >
             <arg value='/c mklink "${link_dir}/language/en-GB/en-GB.[%%com_architectcomp%%].ini" "${basedir}\site\language\en-GB\en-GB.[%%com_architectcomp%%].ini"'/>
         </exec>
         <exec executable="cmd" >
             <arg value='/c mklink "${link_dir}/language/es-ES/es-ES.[%%com_architectcomp%%].ini" "${basedir}\site\language\es-ES\es-ES.[%%com_architectcomp%%].ini"'/>
         </exec>
+		
         <exec executable="cmd" >
             <arg value='/c mklink /d "${link_dir}/media/[%%com_architectcomp%%]" "${basedir}\media"'/>
         </exec>
